# CircuitPython_MPU6886

./: .readthedocs.yaml  README.md  README.rst  mpu6886.py  mpu6886_simpletest.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: mpu6886_simpletest.py
